syntax = "proto3";

package split_service;

// ============================================================================
// Split Service
// ============================================================================
// Used for shard splitting operations. Supports splitting a large shard
// into multiple smaller shards for horizontal scaling.

/// Split service for shard splitting operations
service SplitService {
  /// Start a shard split operation
  /// Initiates the split process from source shard to target shard(s)
  rpc StartSplit(StartSplitRequest) returns (StartSplitResponse);

  /// Get split progress
  /// Query the progress of an ongoing split operation
  rpc GetSplitProgress(GetSplitProgressRequest) returns (GetSplitProgressResponse);

  /// Cancel split operation
  /// Cancel an ongoing split operation and rollback if needed
  rpc CancelSplit(CancelSplitRequest) returns (CancelSplitResponse);

  /// Complete split operation
  /// Mark split as completed and finalize the operation
  rpc CompleteSplit(CompleteSplitRequest) returns (CompleteSplitResponse);
}

/// Start split request
message StartSplitRequest {
  /// Split task ID (unique identifier for this split operation)
  string split_task_id = 1;
  /// Source shard ID (the shard to be split)
  string source_shard_id = 2;
  /// Target shard ID(s) (the new shard(s) created from split)
  repeated string target_shard_ids = 3;
  /// Split slot (the slot boundary where to split)
  /// Data with slot < split_slot stays in source, >= split_slot goes to target
  uint32 split_slot = 4;
  /// Source slot range (start slot of source shard)
  uint32 source_slot_start = 5;
  /// Source slot range (end slot of source shard, exclusive)
  uint32 source_slot_end = 6;
  /// Target nodes for new shard(s)
  repeated string target_nodes = 7;
}

/// Start split response
message StartSplitResponse {
  /// Split task ID
  string split_task_id = 1;
  /// Success flag
  bool success = 2;
  /// Error message (if failed)
  string error_message = 3;
}

/// Get split progress request
message GetSplitProgressRequest {
  /// Split task ID
  string split_task_id = 1;
}

/// Get split progress response
message GetSplitProgressResponse {
  /// Split task ID
  string split_task_id = 1;
  /// Split status
  SplitStatus status = 2;
  /// Split phase
  SplitPhase phase = 3;
  /// Progress information
  SplitProgress progress = 4;
  /// Error message (if failed)
  string error_message = 5;
}

/// Cancel split request
message CancelSplitRequest {
  /// Split task ID
  string split_task_id = 1;
  /// Whether to rollback (clean up target shard data)
  bool rollback = 2;
}

/// Cancel split response
message CancelSplitResponse {
  /// Split task ID
  string split_task_id = 1;
  /// Success flag
  bool success = 2;
  /// Error message (if failed)
  string error_message = 3;
}

/// Complete split request
message CompleteSplitRequest {
  /// Split task ID
  string split_task_id = 1;
}

/// Complete split response
message CompleteSplitResponse {
  /// Split task ID
  string split_task_id = 1;
  /// Success flag
  bool success = 2;
  /// Error message (if failed)
  string error_message = 3;
}

/// Split status
enum SplitStatus {
  SPLIT_STATUS_UNSPECIFIED = 0;
  /// Split operation is preparing
  SPLIT_STATUS_PREPARING = 1;
  /// Split operation is in progress
  SPLIT_STATUS_IN_PROGRESS = 2;
  /// Split operation completed successfully
  SPLIT_STATUS_COMPLETED = 3;
  /// Split operation failed
  SPLIT_STATUS_FAILED = 4;
  /// Split operation was cancelled
  SPLIT_STATUS_CANCELLED = 5;
  /// Split operation not found
  SPLIT_STATUS_NOT_FOUND = 6;
}

/// Split phase
enum SplitPhase {
  SPLIT_PHASE_UNSPECIFIED = 0;
  /// Preparing phase: creating target shards, updating routing table
  SPLIT_PHASE_PREPARING = 1;
  /// Snapshot transfer phase: transferring snapshot data from source to target
  SPLIT_PHASE_SNAPSHOT_TRANSFER = 2;
  /// Log replay phase: replaying incremental logs to catch up
  SPLIT_PHASE_LOG_REPLAY = 3;
  /// Switching phase: updating routing table, switching traffic
  SPLIT_PHASE_SWITCHING = 4;
  /// Completing phase: finalizing and cleaning up
  SPLIT_PHASE_COMPLETING = 5;
}

/// Split progress information
message SplitProgress {
  /// Current phase
  SplitPhase current_phase = 1;
  /// Snapshot transfer progress (0-100)
  uint32 snapshot_progress_percent = 2;
  /// Log replay progress (0-100)
  uint32 log_replay_progress_percent = 3;
  /// Total bytes transferred
  uint64 bytes_transferred = 4;
  /// Total bytes expected
  uint64 bytes_total = 5;
  /// Number of keys transferred
  uint64 keys_transferred = 6;
  /// Total number of keys
  uint64 keys_total = 7;
  /// Current Raft index being replayed
  uint64 current_replay_index = 8;
  /// Target Raft index to reach
  uint64 target_replay_index = 9;
  /// Estimated time remaining (seconds)
  uint64 estimated_seconds_remaining = 10;
}

